--- a/src/App.scss
+++ b/src/App.scss
@@ -24,23 +24,30 @@
 
 .footer {
   background-color: #333333;
-  padding: 1em 1.5em;
+  padding: 0.75em;
   text-align: center;
   position: fixed;
   width: 100%;
   bottom: 0;
+  left:0;
 
   p {
     font-family: Inter;
     color: #fff;
     font-style: normal;
     font-weight: normal;
-    font-size: 0.875em;
+    font-size: 0.75em;
     line-height: normal;
 
     a {
       color: #aaa;
     }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer{
+    display: none;
   }
 }
 
@@ -108,11 +115,30 @@
       cursor: pointer;
       border: none;
       box-shadow: 0px 1px 0px rgba(51, 51, 51, 0.15);
-      margin-left: 1.5em;
 
       &:focus {
         outline: none;
       }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    button {
+      margin-top: 1em;
+      align-self: center;
+    }
+    form{
+      display: flex;
+      flex-direction: column;
+    }
+    input{
+      align-self: center;
+    }
+  }
+
+  @media screen and (min-width: 769px) {
+    button {
+      margin-left: 1.5em;
     }
   }
 }
@@ -228,14 +254,15 @@
   }
 }
 
-.emptystate{
+.emptystate {
   text-align: center;
-  img{
+
+  img {
     max-width: 100%;
   }
 }
 
-.toast{
+.toast {
   font-family: Inter;
 }
 
